home page collapse resolved

--- a/src/container/home/home.module.css
+++ b/src/container/home/home.module.css
@@ -54,7 +54,7 @@
 
 .sec1_img {
   width: 63vw;
-  height:85vw;
+  min-height:84vw;
   margin-left: auto;
   background-size: 54vw;
   background-position-x: right;
@@ -127,14 +127,13 @@
 .collage>div>div {
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 40vw;
   /* min-height: clamp(200px,16vh,980px); */
 }
 
 .collage>div>div>img {
   width: inherit;
-  min-height:50%;
-  object-fit: contain;
+  aspect-ratio:1/2;
 }
 
 #overlay {
@@ -303,7 +302,8 @@
 
 .sec5_img > span > img {
   width: inherit;
-  object-fit: contain;
+  aspect-ratio: 1.2/1;
+  /* object-fit: contain; */
 }
 .sec5_img > span > p {
   padding-top: 1.5vw;
@@ -382,7 +382,7 @@
  }
   .sec1_img {
     width: 100%;
-    height:185vw;
+    min-height:140vw;
     max-width: 500px;
     margin: auto;
     background-position: center min(30vw, 150px);
